# app_restaurant

./: .env  .env-non-dev  .env-tests  Dockerfile  README.md  docker-compose.yml  menu.xlsx  pyproject.toml
app/: alembic.ini  celerybeat-schedule  clear_database.py  config.py  database_entry.py  for_tests_in_docker.py  main.py  table_monitoring.py
app/data_sources/: models.py
app/data_sources/storages/: dish_repository.py  menu_repository.py  submenu_reposytory.py
app/migrations/: env.py
app/migrations/versions/: f7015162f009_new1.py  fc8e8b310cd7_new2db_creation.py
app/pydantic_models/: pydantic_model.py
app/utils/: utils.py
app/views/: crud_for_dish.py  crud_for_menu.py  crud_for_submenu.py
scripts_for_docker/: app.sh  celery.sh  tests.sh
tests/: conftest.py
tests/integration_tests/app_test/views/: test_1crud_for_menu.py  test_2crud_for_submenu.py  test_3crud_for_dish.py
